--- a/expediente/views/menu.xml
+++ b/expediente/views/menu.xml
@@ -2,7 +2,7 @@
     <record id="action_pacientes" model="ir.actions.act_window">
         <field name="name">Pacientes</field>
         <field name="res_model">expediente.paciente</field>
-        <field name="view_mode">list,form</field>
+        <field name="view_mode">kanban,list,form</field>
     </record>
     <menuitem id="menu_paciente_root" name="Gestión de Pacientes" sequence="10"/>
     <menuitem id="menu_paciente" name="Pacientes" parent="menu_paciente_root"
@@ -11,7 +11,7 @@
     <record id="action_citas" model="ir.actions.act_window">
         <field name="name">Citas Médicas</field>
         <field name="res_model">expediente.citamedica</field>
-        <field name="view_mode">list,form</field>
+        <field name="view_mode">kanban,list,form</field>
     </record>
     <menuitem id="menu_citas" name="Citas Médicas" parent="menu_paciente_root" 
               action="action_citas" sequence="20"/> 
