--- a/expediente/views/lista_cita.xml
+++ b/expediente/views/lista_cita.xml
@@ -7,7 +7,10 @@
             <list>
                 <!-- <field name="paciente_id" /> -->
                 <field name="fecha_cita" />
-                <field name="estado" />
+                <field name="doctor" />
+                <field name="motivo" />
+                <field name="diagnostico" />
+                <field name="tratamiento" />
             </list>
         </field>
     </record>
