--- a/cl_registro/views/inicio_views.xml
+++ b/cl_registro/views/inicio_views.xml
@@ -5,13 +5,21 @@
         <field name="arch" type="xml">
             <form string="Inicio">
                 <sheet>
-                    <h1>Bienvenido</h1>
+                    <h1 style="text-align: center; margin-top: 30px; margin-bottom: 50px;">Bienvenido a Clínica CURAH</h1>
                     <div class="row" style="margin-top:20px; text-align:center;">
                         <div class="col-6">
-                            <button name="dummy_inventario" type="object" class="btn btn-primary btn-lg w-100" string="Inventario"/>
+                            <button name="dummy_inventario" type="object" class="btn btn-info btn-sm w-100 d-flex flex-column align-items-center">
+                            <img src="/cl_registro/static/img/inventario1.png" alt="Inventario" style="width: 80px; height: 80px; margin-bottom: 1px;"/>
+                            <span style="font-size: 18px; white-space: normal; margin: 10px;">Inventario</span>
+                            <span style="font-size: 12px; white-space: normal;">Gestión de inventarios</span>
+                            </button>
                         </div>
                         <div class="col-6">
-                            <button name="abrir_expediente" type="object" class="btn btn-success btn-lg w-100" string="Expediente"/>
+                            <button name="abrir_expediente" type="object" class="btn btn-info btn-sm w-100 d-flex flex-column align-items-center">
+                            <img src="/cl_registro/static/img/expedientes1.png" alt="Expediente" style="width: 80px; height: 80px; margin-bottom: 1px;"/>
+                            <span style="font-size: 18px; white-space: normal; margin: 10px;">Expediente</span>
+                            <span style="font-size: 12px; white-space: normal;">Consulta de expedientes</span>
+                            </button>
                         </div>
                     </div>
                 </sheet>
