--- a/medical_partner/views/paciente.xml
+++ b/medical_partner/views/paciente.xml
@@ -6,17 +6,17 @@
             <form>
                 <sheet>
                     <group name="agregar" string="Agregar Nuevo Paciente">
-                        <field name="is_patient"/>
-                        <field name="tipo_pac" invisible="not is_patient"/>
-                        <field name="numero_empleado" invisible="not is_patient"/>
+                        <field name="is_patient" invisible="1"/>
+                        <field name="tipo_pac"/>
+                        <field name="numero_empleado"/>
                     </group>
-                    <group invisible="not is_patient">
+                    <group>
                         <group>
                             <field name="name" string="Nombres"/>
                             <field name="numero_cuenta"/>
                         </group>
                         <group>
-                            <field name="identidad"/>
+                            <field name="vat" string="Número de identidad"/>
                         </group>
                         <group>
                             <field name="genero"/>
@@ -24,22 +24,22 @@
                         </group>
                         <group>
                             <field name="fecha_nac"/>
-                            <field name="correo_inst"/>
+                            <field name="email" string="Correo Institucional"/>
                         </group>
-                        <group>
+                        <group> 
                             <field name="phone" string="Teléfono"/>
                         </group>
                     </group>
-                    <group invisible="not is_patient">
+                    <group>
                         <field name="alergias"/>    
                     </group>
-                    <group invisible="not is_patient">
+                    <group>
                         <field name="med_act"/>   
                     </group>
-                    <group name="ultimo" invisible="not is_patient">
+                    <group name="ultimo">
                         <field name="enf_pre"/>    
                     </group>
-                    <group name="contacto" string="Contacto de Emergencia" invisible="not is_patient">
+                    <group name="contacto" string="Contacto de Emergencia">
                         <group>
                             <field name="nombre_cont"/>
                             <field name="telefono_cont"/>
@@ -49,7 +49,7 @@
                             <field name="telefono_cont2"/>
                         </group>
                     </group>
-                    <notebook invisible="not is_patient">
+                    <notebook>
                         <page string="Citas Médicas">
                             <field name="citas_ids" mode="kanban,list,form">
                                 <kanban>
@@ -75,18 +75,18 @@
                                 <form>
                                     <group>
                                         <group>
-                                            <field name="doctor" />
-                                            <field name="motivo" />
+                                            <field name="doctor"/>
+                                            <field name="motivo"/>
                                         </group>
                                         <group>
-                                            <field name="fecha_cita" />
+                                            <field name="fecha_cita"/>
                                         </group>
                                     </group>
                                     <group>
-                                        <field name="diagnostico" />
+                                        <field name="diagnostico"/>
                                     </group>
                                     <group>
-                                        <field name="tratamiento" />
+                                        <field name="tratamiento"/>
                                     </group>
                                 </form>
                             </field>
@@ -105,8 +105,9 @@
                 <field name="numero_cuenta"/>
                 <field name="name"/>
                 <field name="phone"/>
-                <field name="correo_inst"/>
+                <field name="email"/>
                 <field name="tipo_pac"/>
+                <field name="vat"/>
                 <templates>
                     <t t-name="kanban-box">
                         <div t-attf-class="oe_kanban_global oe_kanban_card">
@@ -122,7 +123,10 @@
                                     <span><strong>Teléfono:</strong> <field name="phone"/></span>
                                 </div>
                                 <div>
-                                    <span><strong>Correo Institucional:</strong> <field name="correo_inst"/></span>
+                                    <span><strong>Correo Institucional:</strong> <field name="email"/></span>
+                                </div>
+                                <div>
+                                    <span><strong>Numero de Identidad: </strong> <field name="vat"/></span>
                                 </div>
                             </div>
                         </div>
